# dummy

./: .gitignore  Integration.postman_collection.json
backend/: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  app.py  auth.py  build.sh  check_changes.sh  db.py  deploy.sh  deps.py  entrypoint.sh  main.py  models.py  notify.sh  pyproject.toml  requirements.txt  test_full_osp_flow.py
backend/api/: deps.py
backend/api/routes/: accounts.py  auth.py  debug.py  payments.py  services.py  transactions.py
backend/api/routes/admin/: accounts.py  payment_management.py  service_management.py  transaction_management.py  user_management.py
backend/core/: config.py  logging.py  permissions.py  rate_limit.py  security.py
backend/core/utils/: currency.py  payments.py  timezone.py  txid.py
backend/db/: session.py
backend/migrations/: env.py
backend/migrations/versions/: 63fa2c9c0f95_add_name_column_to_users.py  9cadee02ceb3_add_invoice_currency_to_payments.py  add_invoice_currency.py
backend/models/: __init__.py  account.py  payment.py  service.py  transaction.py  user.py
backend/schemas/: account.py  admin_payment.py  admin_transaction.py  admin_user.py  payment.py  service.py  transaction.py  user.py
backend/services/: invoices.py  osp_client.py  osp_client_mockup.py  osp_safe_flow.py  payments.py
frontend/: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  build.sh  check_changes.sh  deploy.sh  ecosystem.config.js  notify.sh  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
(+60 files in other folders)
